[package]
name = "sigcrack"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Boye"]
description = "A tool to find collisions in Solidity function signatures"
license = "MIT"

[dependencies]
tiny-keccak = { version = "2.0", features = ["keccak"] }
rayon = "1.5"
hex = "0.4"
anyhow = "1.0"
structopt = "0.3"

clap = { version = "4.4.6", features = ["derive"] }



[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"